Queue & dequeue multiple chunks per frame, update queues only when camera changes chunk position